--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="container mt-5">
-        <h1 class="text-center mb-4">test</h1>
+        <h1 class="text-center mb-4">Portal de Funciones</h1>
 
         <div class="row justify-content-center">
             <div class="col-lg-5 col-md-6 mb-4">
