--- a/templates/index.html
+++ b/templates/index.html
@@ -16,61 +16,71 @@
 <body>
     <nav class="navbar navbar-expand-lg navigation-gtd-movil only-mobile">
         <div class="barra_navegacion__logo desktop_footer">
-          <a href="#">
-            <img alt="GTD Chile" data-src="static\layout_set_logo.png" class=" lazyloaded" src="static\layout_set_logo.png">
-          </a>
+            <a href="#">
+                <img alt="GTD Chile" data-src="static\layout_set_logo.png" class=" lazyloaded"
+                    src="static\layout_set_logo.png">
+            </a>
         </div>
     </nav>
 
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Portal de Funciones</h1>
+        <h1 class="text-center mb-4">test</h1>
 
-        <div class="row justify-content-center">
+        <div class="row">
             <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card h-100 d-flex flex-column">
-                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
-                        <h4 class="card-title">Limpiar Excels bajo un patron específico</h4>
+                <div class="card mb-4">
+                    <div class="card-header" style="background-color: #eda215;">
+                        <!-- Color de fondo para el encabezado -->
                     </div>
-                    <div class="mt-auto d-flex justify-content-center pb-3">
-                        <a href="/limpiar"  class="btn btn-yellow">Ir</a>
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Limpiar Excels bajo un patrón específico</h4>
+                        <div style="margin-bottom: 20px;"></div>
+                        <a href="/limpiar" class="btn btn-yellow">Ir</a>
                     </div>
                 </div>
             </div>
-
+            
             <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card h-100 d-flex flex-column">
-                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
+                <div class="card mb-4">
+                    <div class="card-header" style="background-color: #4db99c;">
+                        <!-- Color de fondo para el encabezado -->
+                    </div>
+                    <div class="card-body text-center">
                         <h4 class="card-title">Consolidar información de Excels</h4>
-                    </div>
-                    <div class="mt-auto d-flex justify-content-center pb-3">
-                        <a href="/consolidar"  class="btn btn-aqua">Ir</a>
+                        <!-- Espacio entre el título y el botón -->
+                        <div style="margin-bottom: 20px;"></div>
+                        <a href="/consolidar" class="btn btn-aqua">Ir</a>
                     </div>
                 </div>
             </div>
-        </div>
+            
 
-        <div class="row justify-content-center">
             <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card h-100 d-flex flex-column">
-                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
-                        <h4 class="card-title">Limpiar archivos CSV</h4>
+                <div class="card mb-4">
+                    <div class="card-header" style="background-color: #66799f;">
+                        <!-- Color de fondo para el encabezado -->
                     </div>
-                    <div class="mt-auto d-flex justify-content-center pb-3">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Limpiar archivos CSV</h4>
+                        <div style="margin-bottom: 20px;"></div>
                         <a href="/detalles" class="btn btn-blue">Ir</a>
                     </div>
                 </div>
             </div>
-
+            
             <div class="col-lg-5 col-md-6 mb-4">
-                <div class="card h-100 d-flex flex-column">
-                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
-                        <h4 class="card-title">Busqueda y descarga PDF</h4>
+                <div class="card mb-4">
+                    <div class="card-header" style="background-color: #d07673;">
+                    <!-- Color de fondo para el encabezado -->
                     </div>
-                    <div class="mt-auto d-flex justify-content-center pb-3">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Búsqueda y descarga PDF</h4>
+                        <div style="margin-bottom: 20px;"></div>
                         <a href="/buscar" class="btn btn-red">Ir</a>
                     </div>
                 </div>
             </div>
+            
         </div>
     </div>
 
