--- a/templates/consolidacion.html
+++ b/templates/consolidacion.html
@@ -5,19 +5,28 @@
     <link rel="icon" href="static\favicon.ico" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Procesador de Archivos Excel</title>
+    <title>Excel GTD</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+    <!-- Enlace a Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-...." crossorigin="anonymous" />
 
 
 </head>
 
-<body class="container mt-5">
 
+<body >
+
+    <nav class="navbar navbar-expand-lg navigation-gtd-movil only-mobile">
+        <div class="barra_navegacion__logo desktop_footer">
+            <a href="#">
+                <img alt="GTD Chile" data-src="static\layout_set_logo.png" class=" lazyloaded"
+                    src="static\layout_set_logo.png">
+            </a>
+        </div>
+    </nav>
+<div class="container mt-5">
     <header class="header">
     <h1 class="mb-4">Consolidación de archivos Excel</h1>
     </header>
@@ -117,11 +126,11 @@
         }
 
     </script>
-
+</div>
 </body>
 
+
 <div class="footer">
-    <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
     <p>&copy; 2024 Procesador de Archivos Excel</p>
 </div>
 
