--- a/templates/consolidacion2.html
+++ b/templates/consolidacion2.html
@@ -16,9 +16,20 @@
 
 </head>
 
-<body class="container mt-5">
 
 
+
+<body >
+
+    <nav class="navbar navbar-expand-lg navigation-gtd-movil only-mobile">
+        <div class="barra_navegacion__logo desktop_footer">
+            <a href="#">
+                <img alt="GTD Chile" data-src="static\layout_set_logo.png" class=" lazyloaded"
+                    src="static\layout_set_logo.png">
+            </a>
+        </div>
+    </nav>
+<div class="container mt-5">
     <form method="post" action="consolidar_archivos" enctype="multipart/form-data" id="form_concatenar_las_columnas">
         {% if headers_base %}
             <!-- Sección para Mostrar Encabezados del Archivo Base -->
@@ -151,12 +162,12 @@
         // });
         });
     </script>
-
-    <div class="footer">
-        <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
-        <button type="button" class="btn btn-secondary mb-3" id="toggle_checkbox_btn">Mostrar/Ocultar Casillas</button>
-        <p>&copy; 2024 Procesador de Archivos Excel</p>
-    </div>
+</div>
 </body>
 
+<div class="footer">
+    <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
+    <button type="button" class="btn btn-secondary mb-3" id="toggle_checkbox_btn">Mostrar/Ocultar Casillas</button>
+    <p>&copy; 2024 Procesador de Archivos Excel</p>
+</div>
 </html>
