--- a/templates/detalles.html
+++ b/templates/detalles.html
@@ -15,7 +15,17 @@
 
 </head>
 
-<body class="container mt-5">
+<body>
+
+    <nav class="navbar navbar-expand-lg navigation-gtd-movil only-mobile">
+        <div class="barra_navegacion__logo desktop_footer">
+            <a href="#">
+                <img alt="GTD Chile" data-src="static\layout_set_logo.png" class=" lazyloaded"
+                    src="static\layout_set_logo.png">
+            </a>
+        </div>
+    </nav>
+<div class="container mt-5">
     <header class="header">
         <h1 class="mb-4">Limpieza archivos tipo CSV</h1>
     </header>
@@ -86,11 +96,12 @@
             }
         }
     </script>
-</body>
 
-<div class="footer">
-    <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
-    <p>&copy; 2024 Procesador de Archivos Excel</p>
 </div>
-
+</body>
+    <!-- Pie de página -->
+    <div class="footer">
+        <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
+        <p>&copy; 2024 Procesador de Archivos Excel</p>
+    </div>
 </html>
