--- a/templates/result4.html
+++ b/templates/result4.html
@@ -12,7 +12,18 @@
     <link rel="stylesheet" href="static/style.css">
 </head>
 
-<body class="container mt-5">
+<body>
+    
+    <nav class="navbar navbar-expand-lg navigation-gtd-movil only-mobile">
+        <div class="barra_navegacion__logo desktop_footer">
+            <a href="#">
+                <img alt="GTD Chile" data-src="static\layout_set_logo.png" class=" lazyloaded"
+                    src="static\layout_set_logo.png">
+            </a>
+        </div>
+    </nav>
+
+<div class="container mt-5">
     <h1>Resultado del Procesamiento</h1>
     <p>{{ message }}</p>
 
@@ -57,10 +68,8 @@
     
     <!-- Enlace a Bootstrap JS y Popper.js (necesarios para algunas funciones de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+</div>
 </body>
-
-
 <div class="footer">
     <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
     <p>&copy; 2024 Procesador de Archivos Excel</p>
